# IBKR-openapi-broken

./: openapi.cabal
src/: IBKR.hs
src/IBKR/: Common.hs  Configuration.hs  SecuritySchemes.hs  TypeAlias.hs  Types.hs
src/IBKR/Operations/: Delete_ccp_order.hs  Delete_fyi_deliveryoptions__deviceId_.hs  Delete_iserver_account__accountId__alert__alertId_.hs  Delete_iserver_account__accountId__order__orderId_.hs  Get_ccp_account.hs  Get_ccp_orders.hs  Get_ccp_positions.hs  Get_ccp_status.hs  Get_ccp_trades.hs  Get_fyi_deliveryoptions.hs  Get_fyi_disclaimer__typecode_.hs  Get_fyi_notifications.hs  Get_fyi_notifications_more.hs  Get_fyi_settings.hs  Get_fyi_unreadnumber.hs  Get_hmds_history.hs  Get_iserver_account__accountId__alerts.hs  Get_iserver_account_alert__id_.hs  Get_iserver_account_mta.hs  Get_iserver_account_order_status__orderId_.hs  Get_iserver_account_pnl_partitioned.hs  Get_iserver_account_trades.hs  Get_iserver_accounts.hs  Get_iserver_contract__conid__algos.hs  Get_iserver_contract__conid__info.hs  Get_iserver_contract__conid__info_and_rules.hs  Get_iserver_marketdata__conid__unsubscribe.hs  Get_iserver_marketdata_history.hs  Get_iserver_marketdata_snapshot.hs  Get_iserver_marketdata_unsubscribeall.hs  Get_iserver_scanner_params.hs  Get_iserver_secdef_info.hs  Get_iserver_secdef_strikes.hs  Get_md_snapshot.hs  Get_portfolio__accountId__allocation.hs  Get_portfolio__accountId__ledger.hs  Get_portfolio__accountId__meta.hs  Get_portfolio__accountId__position__conid_.hs  Get_portfolio__accountId__positions__pageId_.hs  Get_portfolio__accountId__summary.hs  (+43 more)
src/IBKR/Types/: Account.hs  Account.hs-boot  AlertResponse.hs  AlertResponse.hs-boot  Allocation.hs  Allocation.hs-boot  AuthStatus.hs  AuthStatus.hs-boot  Contract.hs  Contract.hs-boot  Futures.hs  Futures.hs-boot  HistoryData.hs  HistoryData.hs-boot  HistoryResult.hs  HistoryResult.hs-boot  Ledger.hs  Ledger.hs-boot  MarketData.hs  MarketData.hs-boot  Notifications.hs  Notifications.hs-boot  OrderData.hs  OrderData.hs-boot  OrderStatus.hs  OrderStatus.hs-boot  Performance.hs  Performance.hs-boot  Position.hs  Position.hs-boot  PositionData.hs  PositionData.hs-boot  ScannerResult.hs  ScannerResult.hs-boot  Secdef.hs  Secdef.hs-boot  Stocks.hs  Stocks.hs-boot  Summary.hs  Summary.hs-boot  (+6 more)
